started HTML & JS

--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
+<header>
+    <h1>Weather Dashboard</h1>
+</header>
 
 <body>
+    <h2>Search for a city:</h2>
+    <input type="text">
+    <button id="searchBtn">Search</button>
 
+    <div id="current-city">
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
 </body>
+
+<footer>
+
+</footer>
 
 </html>
