--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     <input type="text">
     <button id="searchBtn">Search</button>
 
+    <div id="stored-cities">
+
+    </div>
     <div id="current-city">
-
-    </div>
-    <div>
-
-    </div>
-    <div>
 
     </div>
 </body>
