--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets copy/css/style.css">
     <title>Weather Dashboard</title>
 </head>
 
@@ -22,6 +23,7 @@
     </div>
     <div id="currentCity">
     </div>
+    <script src="Assets copy/js/script.js"></script>
 </body>
 
 <footer>
