--- a/index.html
+++ b/index.html
@@ -8,25 +8,20 @@
     <title>Weather Dashboard</title>
 </head>
 
-<header>
-    <h1>Weather Dashboard</h1>
-</header>
-
 <body>
-    <form>
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+    <form id="search">
         <label for="cityName">Search for a city:</label>
         <input type="text" name="cityName" id="cityName">
         <button id="searchBtn">Search</button>
     </form>
-
     <div id="storedCities">
     </div>
     <div id="currentCity">
     </div>
     <script src="Assets copy/js/script.js"></script>
 </body>
-
-<footer>
-</footer>
 
 </html>
