--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </div>
     <div id="currentCity">
     </div>
+    <div id="forecast">
+    </div>
     <script src="Assets copy/js/script.js"></script>
 </body>
 
