--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="./Assets copy/css/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -12,16 +14,17 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
-    <form id="search">
+    <form class="d-flex" id="search">
         <label for="cityName">Search for a city:</label>
         <input type="text" name="cityName" id="cityName">
-        <button id="searchBtn">Search</button>
+        <button class="btn btn-light" id="searchBtn">Search</button>
     </form>
     <div id="storedCities">
     </div>
-    <div id="currentCity">
+    <div class="card" id="currentCity">
     </div>
     <div id="forecast">
+        <div id="dayOne"></div>
     </div>
     <script src="Assets copy/js/script.js"></script>
 </body>
